web/book/tests/examples/snapshots/examples__book__language-features__strings__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from my_table\nselect x = \"hello world\"\n"
---
SELECT
  'hello world' AS x
FROM
  my_table

