web/book/tests/examples/snapshots/examples__book__language-features__strings__5.snap
---
source: web/book/tests/examples/book.rs
expression: "from my_table\nselect x = \"\\t\\tline ends here\\n \\\\ \"\n"
---
SELECT
  '		line ends here
 \ ' AS x
FROM
  my_table

